    provided by webauth.h.  These contained a subset of the encoding rules
    for the WebAuth wire protocol, but were not really useful to clients
    of the library.

    The WA_ERR_KEYRING_* error codes have changed to WA_ERR_FILE_* and
    will be used for any errors inside the WebAuth library when reading or
    writing to files.  Now that WebAuth can report rich error messages,
    there is no need for the codes to be this specific.

WebAuth 4.3.1 (2012-08-08)

    Allow WebAuthDoLogout in .htaccess files with AllowOverride
    AuthConfig.  Previously, WebAuthDoLogout could only be set in the
    Apache server configuration.

    Fix invalid free in webauth_webkdc_login when there are permitted
    realms configured.

    Add a replacement for krb5_cc_get_full_name for Kerberos libraries
    that don't have this function.  Fixes compilation against MIT Kerberos
    1.8 and earlier.

    Fix incorrect Perl module includes in pwchange.fcgi that prevented the
    WebLogin password change component from starting properly.

    Add an overloaded cmp operator for WebAuth::Exception, primarily to
    make testing easier.

    Document that while WebAuthLdapKeytab can be set in either the main
    server configuration or in a virtual host, separate configurations for
    different virtual hosts are not supported due to the way the module is
    currently implemented.

WebAuth 4.3.0 (2012-08-06)

    mod_webauth now sets the HttpOnly flag on all WebAuth session cookies
    by default.  This can be turned off at the server or virtual host
    level with the new WebAuthHttpOnly Apache directive.  (Although be
    aware that the structure of the WebAuth cookies is an internal
    implementation detail; if this directive is needed, the web site is
    probably doing something unsupported.)

    WebLogin now sets the HttpOnly flag on the single sign-on cookie, and
    on the test cookie used to probe whether cookies are supported.
