@@ -418,7 +418,7 @@ webauth_keyring_auto_update(struct webauth_context *ctx, const char *path,
     *update_status = WA_ERR_NONE;
     status = webauth_keyring_read(ctx, path, ring);
     if (status != WA_ERR_NONE) {
-        if (!create || status != WA_ERR_FILE_OPENREAD)
+        if (!create || status != WA_ERR_FILE_NOT_FOUND)
             return status;
         *updated = WA_KAU_CREATE;
         return new_ring(ctx, path, ring);
