@@ -380,6 +380,7 @@ BOOT:
     IV_CONST(WA_ERR_UNIMPLEMENTED);
     IV_CONST(WA_ERR_INVALID);
     IV_CONST(WA_ERR_REMOTE_FAILURE);
+    IV_CONST(WA_ERR_FILE_NOT_FOUND);
 
     /* Protocol error codes from the WebKDC. */
     IV_CONST(WA_PEC_SERVICE_TOKEN_EXPIRED);
