@@ -197,7 +197,7 @@ main(void)
     /* Test creating a new keyring with keyring_auto_update. */
     unlink(keyring);
     s = webauth_keyring_auto_update(ctx, keyring, false, 0, &ring, &kau, &ks);
-    is_int(WA_ERR_FILE_OPENREAD, s,
+    is_int(WA_ERR_FILE_NOT_FOUND, s,
            "keyring_auto_update fails with no ring and no creation");
     is_int(WA_KAU_NONE, kau, "... with correct kau_status");
     s = webauth_keyring_auto_update(ctx, keyring, true, 0, &ring, &kau, &ks);
